--- a/style.css
+++ b/style.css
@@ -63,7 +63,7 @@ p {
 }
 
 .card span {
-  background-color: var(--yellow);
+  /* background-color: var(--yellow); */
   width: 50px;
   height: 50px;
   padding: 20px;
